--- a/InformaticToolbar/en.lproj/MainStoryboard.storyboard
+++ b/InformaticToolbar/en.lproj/MainStoryboard.storyboard
@@ -25,11 +25,27 @@
                                     <action selector="addProgressBarItemSet:" destination="2" eventType="touchUpInside" id="Fq8-OP-XtD"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Muz-hI-LcG">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Add Label to Toolbar">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="addLabelBarItemSet:" destination="2" eventType="touchUpInside" id="A48-is-DTF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="6rh-uq-Mc7" firstAttribute="top" secondItem="Muz-hI-LcG" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Iq8-HI-Zg1"/>
                             <constraint firstItem="6rh-uq-Mc7" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="RaT-7d-2KW"/>
-                            <constraint firstItem="6rh-uq-Mc7" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="h2k-3g-jBg"/>
+                            <constraint firstItem="Muz-hI-LcG" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="TkC-7c-Dlu"/>
+                            <constraint firstItem="Muz-hI-LcG" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="pRQ-Si-SH7"/>
+                            <constraint firstAttribute="trailing" secondItem="Muz-hI-LcG" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="r9R-Un-e9o"/>
                             <constraint firstAttribute="trailing" secondItem="6rh-uq-Mc7" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="yIl-LQ-dmO"/>
                         </constraints>
                     </view>
@@ -62,6 +78,7 @@
         <class className="ITViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ITViewController.h"/>
             <relationships>
+                <relationship kind="action" name="addLabelBarItemSet:"/>
                 <relationship kind="action" name="addProgressBarItemSet:"/>
             </relationships>
         </class>
