--- a/InformaticToolbar/en.lproj/MainStoryboard.storyboard
+++ b/InformaticToolbar/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BUu-af-VDd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BUu-af-VDd">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -12,7 +12,8 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6rh-uq-Mc7">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6rh-uq-Mc7">
+                                <rect key="frame" x="20" y="71" width="280" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Add Progress to Toolbar">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -25,7 +26,8 @@
                                     <action selector="addProgressBarItemSet:" destination="2" eventType="touchUpInside" id="Fq8-OP-XtD"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m5Q-aQ-ld1">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="m5Q-aQ-ld1">
+                                <rect key="frame" x="20" y="122" width="280" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Add Confirmation to Toolbar">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -38,7 +40,8 @@
                                     <action selector="addConfirmationBarItemSet:" destination="2" eventType="touchUpInside" id="kUz-CJ-qjk"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Muz-hI-LcG">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Muz-hI-LcG">
+                                <rect key="frame" x="20" y="20" width="280" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Add Label to Toolbar">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -53,17 +56,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="m5Q-aQ-ld1" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="EDv-I9-m9v"/>
-                            <constraint firstItem="6rh-uq-Mc7" firstAttribute="top" secondItem="Muz-hI-LcG" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Iq8-HI-Zg1"/>
-                            <constraint firstItem="6rh-uq-Mc7" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="RaT-7d-2KW"/>
-                            <constraint firstItem="Muz-hI-LcG" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="TkC-7c-Dlu"/>
-                            <constraint firstItem="m5Q-aQ-ld1" firstAttribute="top" secondItem="6rh-uq-Mc7" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="XWp-IH-4w5"/>
-                            <constraint firstItem="Muz-hI-LcG" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="pRQ-Si-SH7"/>
-                            <constraint firstAttribute="trailing" secondItem="Muz-hI-LcG" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="r9R-Un-e9o"/>
-                            <constraint firstAttribute="trailing" secondItem="6rh-uq-Mc7" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="yIl-LQ-dmO"/>
-                            <constraint firstItem="m5Q-aQ-ld1" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="yMY-0M-et7"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MRn-s4-G28"/>
                 </viewController>
@@ -98,9 +90,6 @@
                 <relationship kind="action" name="addLabelBarItemSet:"/>
                 <relationship kind="action" name="addProgressBarItemSet:"/>
             </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
